delete forecast service(python)
